
<resources>
    <string name="app_name">Lab_7</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title">Zevent</string>
    <string name="about_description">Soy una aplicacion dedicada a la administracion de invitados
    para todo evento privado</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_guest">Invitados</string>
    <string name="menu_roles">Roles</string>

    <string name="home_second">Home Second</string>
    <string name="text_zvent_email">support@zvent.com</string>
    <string name="text_zvent_title">Zvent Organizing App</string>
    <string name="text_btn_iniciar">Iniciar</string>
    <string name="text_agregar_invitado">Agregar invitado</string>
    <string name="text_agregar_rol">Agregar rol</string>
    <string name="text_seleccionar_rol">Seleccione el rol</string>
    <string name="text_seleccionar_orden">Seleccione el órden</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_registrando">Registrando</string>
    <string name="text_resultado">Resultados</string>
    <string name="text_registro">Registro</string>
    <string name="text_invitados">Invitados: 8</string>
    <string name="text_registrados">Registrados: </string>
    <string name="text_restart">Reiniciar</string>
    <string name="text_see_guest">Ver invitados</string>

    <string name="text_nombre_requerido">Nombre requerido</string>
    <string name="text_telefono_requerido">Teléfono requerido</string>
    <string name="text_correo_requerido">Correo electrónico requerido</string>


    <string name="text_help">Ayuda</string>
    <string name="text_ayuda_description">Encuentra respuestas a tus preguntas de Zvent aqui</string>
    <string name="edit_text_name">Ingrese el nombre</string>
    <string name="edit_text_phone">Ingrese el teléfono</string>
    <string name="edit_text_email">Ingrese el correo electrónico</string>
    <string name="edit_text_description">Ingrese la descripción</string>
    <string name="title_android_guest">Registrando (%1$d/%2$d)</string>
    <string name="insert_the_icon_index">Insert the icon index</string>

    <string name="text_role_description">Descripción: %1$s</string>

    <string name="text_guest_phone">Teléfono: %1$s</string>
    <string name="text_guest_email">Correo: %1$s</string>
    <string name="text_guest_role"> (%1$s) </string>
    <string name="text_guest_registered"> %1$b</string>
    <string name="text_guest_description">Descripción: %1$s</string>

    <string name="icon_index_text">%d</string>

</resources>
