<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/guest_fragment"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_guest" />
        <item
            android:id="@+id/roles_fragment"
            android:icon="@drawable/ic_insert_drive"
            android:title="@string/menu_roles" />
        <item
            android:id="@+id/about_fragment"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
    </group>
</menu>
