<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.lab_7.ui.addroles.AddRolesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.addroles.AddRolesFragment">

            <EditText
                android:id="@+id/icon_index_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/insert_the_icon_index"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/edit_text_name"
                android:inputType="textPersonName"
                android:text="@={viewModel.role}"
                android:textAlignment="center"
                android:textColorLink="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/edit_text_description"
                android:inputType="textPersonName"
                android:text="@={viewModel.desctiption}"
                android:textAlignment="center"
                android:textColorLink="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_name" />


            <TextView
                android:id="@+id/text_seleccionar_orden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_seleccionar_orden"
                app:layout_constraintBottom_toTopOf="@+id/seekBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_description" />

            <SeekBar
                android:id="@+id/seekBar"
                style="@android:style/Widget.Material.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:layerType="hardware"
                android:layoutDirection="ltr"
                android:max="10"
                android:progress="@={viewModel.orden}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_seleccionar_orden" />

            <TextView
                android:id="@+id/seekBar_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="0"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/seekBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

